fixes footer on smaller screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+footer {
+    position: static;
+    bottom: 0;
+}
